<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/username"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="18sp"
        android:background="@drawable/textfield_default_holo_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="18sp"
        android:background="@drawable/textfield_default_holo_light"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etUsername"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/etBirthday"
        android:text="@string/birthday_placeholder"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="18sp"
        android:background="@drawable/textfield_default_holo_light"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etPassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etBirthday"
        android:layout_marginTop="36dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:text="@string/create_account"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
